oci/common/istio-1-11/istio-install/overlays/oci-load-balancer/patches/istio-sidecar-injector.MutatingWebhookConfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    admissions.enforcer/disabled: "true"
  name: istio-sidecar-injector
